front: fix last waypoints hidden with warning
Add a padding-bottom to the waypoints panel body when the warning message is displayed, allowing
the last waypoints from the manchette not to be hidden by it

--- a/front/src/styles/scss/applications/operationalStudies/_waypointsPanel.scss
+++ b/front/src/styles/scss/applications/operationalStudies/_waypointsPanel.scss
@@ -44,6 +44,10 @@
     padding-left: calc(1.125rem - 0.125rem); // 0.125rem > checkbox border
     overflow-y: scroll;
 
+    &.with-warning {
+      padding-bottom: 144px; // height + margin of the warning message
+    }
+
     .waypoint-item {
       height: 2.5rem;
       display: flex;
